# nightreign_style_hud

./: .gitignore  Cargo.toml  LICENSE  README.md
Param_csv/: Atk_PC.csv  Behavior_PC.csv  Buddy.csv  Bullet.csv  Speffect.csv
crates/eldenring/src/: ez_state.rs
crates/eldenring/src/cs/: bullet_manager.rs  camera.rs  fe_man.rs  field_ins.rs  menu_man.rs  menu_type.rs  now_loading.rs  talk_script.rs
crates/eldenring/src/dlut/: date_time.rs  fixed_vector.rs
crates/eldenring/src/ez_state/: environment_query.rs  event.rs
examples/nightreign-precision-aim/: Cargo.toml  README.md
examples/nightreign-precision-aim/src/: lib.rs
examples/nightreign-style-hud/: Cargo.toml
examples/nightreign-style-hud/src/: damage.rs  draw.rs  hud.rs  icons.rs  lib.rs  roles.rs  runtime.rs  state.rs
examples/nightreign-style-hud/src/c++/: README.md  dllmain.cpp
