[package]
name = "nightreign-precision-aim"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
debug.workspace = true
eldenring.workspace = true
fromsoftware-shared.workspace = true
image = "0.24.8"
tracing.workspace = true
tracing-appender.workspace = true
tracing-panic.workspace = true
tracing-subscriber.workspace = true
windows.workspace = true

[dependencies.hudhook]
git = "https://github.com/veeenu/hudhook"
features = [
    "imgui-tables-api"
]

[lib]
crate-type = ["cdylib"]
