[package]
name = "nightreign-style-hud"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
debug.workspace = true
eldenring.workspace = true
fromsoftware-shared.workspace = true
ilhook = { version = "2.3.0", features = ["x64"] }
image = "0.24.8"
pelite.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-panic.workspace = true
tracing-subscriber.workspace = true

[dependencies.hudhook]
git = "https://github.com/veeenu/hudhook"
features = [
    "imgui-tables-api"
]

[lib]
crate-type = ["cdylib"]
